tried to figure out the relationship between tables and frontent bookingforms, maybe need to rebuild entities, dto in order to have what we need